Change an error in the folder name

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -35,7 +35,7 @@
         <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/buenos-aires-argentina/800x500/buenos-aires-argentina-temple-lds-236979-wallpaper.jpg" alt="Buenos Aires, Argentina Temple" width="200">
     </aside>
     <footer>
-        Belen Contana
+       🪷 Belen Contana 🪷
     </footer>
   </body>
 </html>
