Home page enhancement

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Belen Contana | WDD 130</title>
+    <meta name="description" content="My name is Belen Contana, this page is for my web development course, to learn and practice how to design a web site.">
+    <meta name="author" content="Belen Contana">
+
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
@@ -16,10 +19,15 @@
     </header>
     <main>
       <h1>Belen Contana | WDD 130</h1>
-      <img src="images/profile.jpg" alt="Profile Image: Belen Contana" width="200"/>
+      <img src="images/profile.jpg" alt="Profile Image: Belen Contana" width="200">
       <p>Hello! My name is Belen Contana and I am from Buenos Aires, Argentina. I enjoy read and spend time outdoors with my children.<br>
         I am a freelance user experience and interface designer, working remotely from home.</p>
     </main>
+    <aside>
+      <h2>Argentina</h2>
+      <img src="images/capital-argentina.jpg" alt="Buenos Aires, Argentina picture">
+      <p>Argentina is the second largest country in South America. It is a federation of 23 provinces and an autonomous city, Buenos Aires, the most industrialized region. The country is rich in natural resources, particularly lead, zinc, tin, copper, magnesium, petroleum and uranium.</p>
+    </aside>
     <footer>
       <p>&copy;2024 🪷 Belen Contana 🪷 Buenos Aires, Argentina</p>
     </footer>
