new folder week03

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>Rafting Site Plan</h1>
-        <div>Belen Contana</div>
+        <div>Belén Contana</div>
     </header>
     <main>
         <h2>Overview</h2>
@@ -52,7 +52,7 @@
         <h3>Typography</h3>
 
         <h4>Headings Example Font</h4>
-        <h2>Oswald - Sans Serif</h2>
+        <p class="heading-example"> Oswald - Sans Serif</p>
         <a href="https://fonts.google.com/specimen/Oswald" target="_blank">https://fonts.google.com/specimen/Oswald</a>
 
         <h4>Normal Text/Paragraph Example Font</h4>
@@ -70,7 +70,6 @@
           <a href="#">Trips</a>
           <a href="#">Contact Us</a>
         </nav>
-      
         <h2>Wireframes</h2>
         <h3>Home Page Wireframe</h3>
         <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Required Home Page Wireframe Design" width="700">        
