--- a/index.html
+++ b/index.html
@@ -15,22 +15,35 @@
         <a href="#">Home</a>
         <a href="wwr/">Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+        <a href="https://www.linkedin.com/in/bscatala/">Linkedin profile</a>
+        <a href="https://www.facebook.com/bs.catala/?locale=es_LA">Facebook page</a>
       </nav>
     </header>
     <main>
       <h1>Belen Contana | WDD 130</h1>
       <img src="images/profile.jpg" alt="Profile Image: Belen Contana" width="200">
-      <p>Hello! My name is Belen Contana and I am from Buenos Aires, Argentina. I enjoy read and spend time outdoors with my children.<br>
-        I am a freelance user experience and interface designer, working remotely from home.</p>
+      <p>Hello! My name is Belen Contana and I am from Buenos Aires, Argentina. I enjoy read and spend time outdoors with my children.
+        I am a freelance user experience and interface designer, working remotely from home. Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Deserunt animi praesentium, laudantium quo fugiat cum consectetur quasi corporis qui odit aliquam dolores maiores in beatae saepe. 
+        Saepe repudiandae qui deserunt reprehenderit fugit commodi voluptate nemo corrupti consequuntur, 
+        ad, neque mollitia asperiores in voluptatibus amet earum! Quibusdam aspernatur alias iure sunt!</p>
+      <ul class="box">
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/buenos-aires-argentina-temple?lang=eng" target="_blank">Buenos Aires Argentina Temple</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/concepcion-chile-temple?lang=eng" target="_blank">Concepción Chile Temple</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/provo-utah-temple?lang=eng" target="_blank">Provo Utah Temple</a></li>
+      </ul>
     </main>
-    <aside>
+    <aside class="box">
       <h2>Argentina</h2>
       <img src="images/capital-argentina.jpg" alt="Buenos Aires, Argentina picture">
       <p>Argentina is the second largest country in South America. It is a federation of 23 provinces and an autonomous city, Buenos Aires, the most industrialized region. The country is rich in natural resources, particularly lead, zinc, tin, copper, magnesium, petroleum and uranium.</p>
     </aside>
     <footer>
       <p>&copy;2024 🪷 Belen Contana 🪷 Buenos Aires, Argentina</p>
+      <p>
+      </p>
     </footer>
 
   </body>
+  <!-- Last modify: 15/05/2024 -->
 </html>
