--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="#">Home</a>
         <a href="wwr/">Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
-        <a href="https://www.linkedin.com/in/bscatala/">Linkedin profile</a>
+        <a href="https://www.linkedin.com/in/bscatala/">LinkedIn profile</a>
         <a href="https://www.facebook.com/bs.catala/?locale=es_LA">Facebook page</a>
       </nav>
     </header>
