--- a/wwr/about.html
+++ b/wwr/about.html
@@ -48,11 +48,11 @@
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
-            <img src="images/rafting-adventure-1.jpg" alt="Image:rafting adventure" width="300">
-            <img src="images/rafting-adventure-2.jpg" alt="Image:rafting adventure" width="300">
-            <img src="images/rafting-adventure-3.jpg" alt="Image:rafting adventure" width="300">
-            <img src="images/rafting-adventure-4.jpg" alt="Image:rafting adventure" width="300">
-            <img src="images/rafting-adventure-5.jpg" alt="Image:rafting adventure" width="300">
+            <img src="images/rafting-adventure-1.jpg" alt="Image:rafting adventure">
+            <img src="images/rafting-adventure-2.jpg" alt="Image:rafting adventure">
+            <img src="images/rafting-adventure-3.jpg" alt="Image:rafting adventure">
+            <img src="images/rafting-adventure-4.jpg" alt="Image:rafting adventure">
+            <img src="images/rafting-adventure-5.jpg" alt="Image:rafting adventure">
         </section>
     </main>
     <footer>
