Update about us page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -17,6 +17,7 @@
 </head>
 <body>
     <header>
+        <img src="images/logo.png" alt="Rafting Site Logo" width="100">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About us</a>
@@ -27,14 +28,16 @@
     <main>
         <div class="hero">
             <img src="images/rafting-div-bg.jpg" alt="Image: rafting background">
-            <h1>Rafting Company Name</h1>
-            <article>
-                <img src="images/happy-client.jpg" alt="Image: happy client" width="120">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, architecto? Delectus tempora natus debitis id minima 
-                    libero iste corrupti officiis rerum minus cupiditate ducimus repellendus obcaecati laboriosam numquam hic, sapiente recusandae 
-                    quisquam exercitationem dignissimos ut fugiat necessitatibus beatae? Expedita excepturi error aspernatur voluptas illo, 
-                    repellat quam dolorem, sint numquam quae, fugiat explicabo modi quod incidunt blanditiis est aut doloremque libero.</p>
-            </article>
+            <div class="hero-grid">
+                <h1>Rafting Company Name</h1>
+                <article>
+                    <img src="images/happy-client.jpg" alt="Image: happy client" width="120">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, architecto? Delectus tempora natus debitis id minima 
+                        libero iste corrupti officiis rerum minus cupiditate ducimus repellendus obcaecati laboriosam numquam hic, sapiente recusandae 
+                        quisquam exercitationem dignissimos ut fugiat necessitatibus beatae? Expedita excepturi error aspernatur voluptas illo, 
+                        repellat quam dolorem, sint numquam quae, fugiat explicabo modi quod incidunt blanditiis est aut doloremque libero.</p>
+                </article>
+            </div>
         </div>
         <section>
             <h2>History</h2>
@@ -51,11 +54,13 @@
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
-            <img src="images/rafting-adventure-1.jpg" alt="Image:rafting adventure">
-            <img src="images/rafting-adventure-2.jpg" alt="Image:rafting adventure">
-            <img src="images/rafting-adventure-3.jpg" alt="Image:rafting adventure">
-            <img src="images/rafting-adventure-4.jpg" alt="Image:rafting adventure">
-            <img src="images/rafting-adventure-5.jpg" alt="Image:rafting adventure">
+            <div class="gallery">
+                <img src="images/rafting-adventure-1.jpg" alt="Image:rafting adventure">
+                <img src="images/rafting-adventure-2.jpg" alt="Image:rafting adventure">
+                <img src="images/rafting-adventure-3.jpg" alt="Image:rafting adventure">
+                <img src="images/rafting-adventure-4.jpg" alt="Image:rafting adventure">
+                <img src="images/rafting-adventure-5.jpg" alt="Image:rafting adventure">
+            </div>
         </section>
     </main>
     <footer>
@@ -66,5 +71,5 @@
             <a href="https://instagram.com"><img src="images/instagram.svg" alt="Instagram" width="50"></a>
           </nav>          
     </footer>
-</body>
+</body> 
 </html>
