Update about us page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -55,11 +55,26 @@
         <section>
             <h2>Adventure Awaits You!</h2>
             <div class="gallery">
-                <img src="images/rafting-adventure-1.jpg" alt="Image:rafting adventure">
-                <img src="images/rafting-adventure-2.jpg" alt="Image:rafting adventure">
-                <img src="images/rafting-adventure-3.jpg" alt="Image:rafting adventure">
-                <img src="images/rafting-adventure-4.jpg" alt="Image:rafting adventure">
-                <img src="images/rafting-adventure-5.jpg" alt="Image:rafting adventure">
+                <figure>
+                    <img src="images/rafting-adventure-1.jpg" alt="Image:rafting adventure">
+                    <figcaption>Half Day Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting-adventure-2.jpg" alt="Image:rafting adventure">
+                    <figcaption>A group enjoying</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting-adventure-3.jpg" alt="Image:rafting adventure">
+                    <figcaption>White river rapids</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting-adventure-4.jpg" alt="Image:rafting adventure">
+                    <figcaption>Sunset Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting-adventure-5.jpg" alt="Image:rafting adventure">
+                    <figcaption>Big groups Adventures</figcaption>
+                </figure>
             </div>
         </section>
     </main>
