Add grid to header, and real text to hero section and history, to About page. Fix contrast issues to My page.

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -29,28 +29,30 @@
         <div class="hero">
             <img src="images/rafting-div-bg.jpg" alt="Image: rafting background">
             <div class="hero-grid">
-                <h1>Rafting Company Name</h1>
+                <h1>WhiteWater Rafting</h1>
                 <article>
-                    <img src="images/happy-client.jpg" alt="Image: happy client" width="120">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, architecto? Delectus tempora natus debitis id minima 
-                        libero iste corrupti officiis rerum minus cupiditate ducimus repellendus obcaecati laboriosam numquam hic, sapiente recusandae 
-                        quisquam exercitationem dignissimos ut fugiat necessitatibus beatae? Expedita excepturi error aspernatur voluptas illo, 
-                        repellat quam dolorem, sint numquam quae, fugiat explicabo modi quod incidunt blanditiis est aut doloremque libero.</p>
+                    <img src="images/happy-client.jpg" alt="Image: happy client" width="10">
+                    <p>What an experience.! not to be missed. Looked after from beginning to end, making sure we had everything we needed 
+                        for the best time. It was a cold April day but with wetsuits, neoprene jackets, gloves and socks we were toasty 
+                        warm and we had so much fun, with great tuition to put you at ease throughout. What a way to enjoy the river !.. a bucket 
+                        list tick for me. Thank you a lot to WHITEWATER Rafting team.</p>
                 </article>
             </div>
         </div>
         <section>
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque laudantium hic necessitatibus beatae distinctio doloribus 
-            repellendus, consequuntur illum animi ad temporibus ducimus minus rem, fugit exercitationem libero molestias sapiente. Accusantium. 
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur magni corporis doloribus soluta voluptatibus culpa reprehenderit 
-            inventore. Minus porro excepturi architecto eaque reiciendis necessitatibus repellendus quo quaerat quasi in alias quas nihil, 
-            exercitationem voluptatibus assumenda nemo perferendis iste ab deleniti placeat laudantium reprehenderit accusamus! Eaque consectetur 
-            quis nostrum, dolor, dolorum quam ut officia at numquam quia deleniti molestiae suscipit laudantium. Lorem ipsum dolor sit, amet 
-            consectetur adipisicing elit. Officiis ex, enim, repellat minus aliquam unde perspiciatis culpa ducimus explicabo reiciendis in repudiandae 
-            dolorem quos nulla ipsum sit ullam reprehenderit possimus. Dignissimos dolore modi consequatur quam nobis similique, nostrum corporis id 
-            commodi quaerat autem recusandae. Beatae magni quaerat nam quae et consequuntur magnam veniam. Earum assumenda saepe consequatur porro 
-            asperiores praesentium!</p>
+            <p>WHITEWATER was founded in 1969 by river pioneer George Morgan. By 1973 the company found its permanent home in Angels Camp, 
+                California, where George and his wife Pam turned a fledgling rafting company into what is now one of the most respected 
+                outfitting companies in the world.<br>
+                <br>
+                George was president of WHITEWATER for 48 years until his passing in Jun of 2014. He was a visionary entrepreneur and one of 
+                the adventure travel industry’s trailblazers. But more importantly, he left a legacy of river conservation and stewardship 
+                based on the inspiring idea that spreading the love of wild rivers is the surest path to their protection, now and for the 
+                enjoyment of future generations.<br>
+                <br>
+                Today, Tyler and Jhon Morgan, George and Pam’s sons, are leading the company. They’re dedicated to furthering the company’s 
+                commitment to the preservation of wild places and creating meaningful outdoor experiences for our guests—values that have 
+                been at the core of WHITEWATER for five decades.<br></p>
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
@@ -79,11 +81,11 @@
         </section>
     </main>
     <footer>
-        <p>&copy;2024 Rafting Company Name | Belén Contana</p>
+        <p>&copy;2024 WhiteWater Rafting | Belén Contana</p>
         <nav class="sociallinks">
-            <a href="https://facebook.com"><img src="images/facebook.svg" alt="Facebook" width="50"></a>
-            <a href="https://twitter.com"><img src="images/twitter.svg" alt="Twitter" width="50"></a>
-            <a href="https://instagram.com"><img src="images/instagram.svg" alt="Instagram" width="50"></a>
+            <a href="https://facebook.com"><img src="images/facebook.svg" alt="Facebook" width="30"></a>
+            <a href="https://twitter.com"><img src="images/twitter.svg" alt="Twitter" width="30"></a>
+            <a href="https://instagram.com"><img src="images/instagram.svg" alt="Instagram" width="30"></a>
           </nav>          
     </footer>
 </body> 
