--- a/quiz.html
+++ b/quiz.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML and CSS Quiz</title>
     <meta name="author" content="Belen Contana">
+    <meta name="description" content="HTML and CSS Quiz">
     <link rel="stylesheet" href="styles/quiz.css">
 </head>
 <body>
-    <box>
+    <div class="all-content">
         <h1>HTML and CSS Quiz</h1>
         <form action="submit_quiz.html" method="post">
             <!-- Text Input Question -->
@@ -45,6 +46,6 @@
                 <button type="submit">Submit Quiz</button>
             </div>
         </form>
-    </box>
+    </div>
 </body>
 </html>
