--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Rafting Company Name</title>
+    <title>About Us - WhiteWater Rafting </title>
     <meta name="description" content="My name is Belen Contana, this page is for my web development course, to learn and practice how to design a web site.">
     <meta name="author" content="Belen Contana">
 
