fixed typing HTML errors

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -54,10 +54,8 @@
                 </nav>
             </div>
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104318.15201971933!2d-111.79985350273436!3d35
-                 .20790740000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872d8f4925df8c8f%3A0xce5dd6d06971e24!2sGrand
-                 %20Canyon%20Whitewater!5e0!3m2!1ses-419!2sar!4v1717640310846!5m2!1ses-419!2sar" width="400" height="300"
-                 allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104318.15201971933!2d-111.79985350273436!3d35.20790740000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872d8f4925df8c8f%3A0xce5dd6d06971e24!2sGrand%20Canyon%20Whitewater!5e0!3m2!1ses-419!2sar!4v1717640310846!5m2!1ses-419!2sar" 
+                width="400" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
         <section class="employees">
@@ -86,11 +84,11 @@
             <p>Send us a message and we'll respond within 24 hours.</p>
             <form action="envio_form.php" method="POST">
                 <div class="choose-option">
-                    <input type="radio" id="option-1" name="General Inquiry"></input>
+                    <input type="radio" id="option-1" name="General Inquiry">
                     <label for="option-1">General Inquiry</label>
-                    <input type="radio" id="option-2" name="Reservation Question"></input>
+                    <input type="radio" id="option-2" name="Reservation Question">
                     <label for="option-2">Reservation Question</label>
-                    <input type="radio" id="option-3" name="Website Suggestion"></input>
+                    <input type="radio" id="option-3" name="Website Suggestion">
                     <label for="option-3">Website Suggestion</label>
                 </div>
                 <div class="name">
@@ -106,7 +104,7 @@
                     <textarea id="message" name="message" placeholder="Your message" required></textarea>
                 </div>
                 <div class="checkbox">
-                    <input type="checkbox" id="subscribe" name="newsletter"></input>
+                    <input type="checkbox" id="subscribe" name="newsletter">
                     <label for="subscribe">Please subscribe me to the monthly newsletter.</label>
                 </div>
                 <div class="button">
